simplified application.less logout hover method, hotfix for issue #66 (story overflow)

--- a/app/views/less/application.less
+++ b/app/views/less/application.less
@@ -26,13 +26,12 @@ body {
     margin-right: 10px;
     margin-left: 10px;
     cursor: pointer;
+
+    &:hover{
+      color: #999;
+    }
   }
 
-  input[type=submit]:hover {
-    color: #999;
-  }
-
-  
 
   #welcome {
     font-size: 30px;
